tests/paczka1/small_fuzzy/45226460.err
Error in line 4: ukhjG3iiB A424 22,0
Error in line 2: N3o A410 41,9
Error in line 8: N3o S732 31,7
